# ChangeLog for media-gfx/cld-themes
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cld-themes-11.6 (17 May 2011)

  17 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cld-themes-11.6.ebuild:
  Bump version.

*cld-themes-11.3 (09 Mar 2011)

  09 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cld-themes-11.3.ebuild:
  Bump version.

*cld-themes-11.0-r7 (27 Dec 2010)

  27 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cld-themes-11.0-r6.ebuild, +cld-themes-11.0-r7.ebuild:
  Update for add 1024x600

*cld-themes-11.0-r5 (27 Dec 2010)

  27 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cld-themes-11.0-r4.ebuild, +cld-themes-11.0-r5.ebuild:
  Update for add 1024x600

*cld-themes-10.9-r3 (17 Nov 2010)

  17 Nov 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cld-themes-10.9-r2.ebuild, +cld-themes-10.9-r3.ebuild:
  depend on media-gfx/splashutils

*cld-themes-10.9-r2 (01 Oct 2010)

  01 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cld-themes-10.9-r1.ebuild, +cld-themes-10.9-r2.ebuild:
  Update calculate.eclass.

  23 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cld-themes-10.9-r1.ebuild:
  Stable cld-themes-10.9

*cld-themes-10.9-r1 (06 Sep 2010)

  06 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cld-themes-10.9.ebuild, +cld-themes-10.9-r1.ebuild:
  Update method of initrd refresh.

*cld-themes-10.9 (24 Aug 2010)

  24 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cld-themes-10.9.ebuild:
  Bump version.

*cld-themes-10.0.1 (11 Dec 2009)

  11 Dec 2009; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cld-themes-10.0.1.ebuild:
  Version bump. Add update boot splash.

  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  cld-themes-10.0-r1.ebuild:
  Fix dependens.

*calculate-cld-themes-10.0-r1 (23 Nov 2009)

  23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cld-themes-10.0.ebuild: