@@ -4,6 +4,7 @@ DIST cld-themes-10.4.tar.bz2 19719147 RMD160 36e04b6a488f155775f9d29d8f2dcea8133
 DIST cld-themes-10.9.tar.bz2 21497786 RMD160 ed9ee77758c692b274a986cb0efe3252ebcdd585 SHA1 2e0c4fbc0ba661fcc7fbaed7dcf359ac9efe20c2 SHA256 6c4a41054fdf0bbc3614d79493f76bf9a4ebb72d79f4992ad35cc05e09d2345c
 DIST cld-themes-11.0.tar.bz2 36139410 RMD160 dc0a0383f7ed4dacc5138021b420e96c6ee84c35 SHA1 8e3253897e248d5717484ff920a91a4aceba1fbe SHA256 72325de3b55ae85e09a88b4aa8c185e422633a600db609cc0ce3d5db2409dfb9
 DIST cld-themes-11.3.tar.bz2 36076595 RMD160 509ec0f9f921cb1c221dbfe2f771a31c29d5e045 SHA1 96b3376b364f69547a2b72635e4623fa8033a26a SHA256 83112b930f59de765f13034957e81b5e9eb76def3591eef0c7f45f357e25f1cc
+DIST cld-themes-11.6-r1.tar.bz2 39464447 RMD160 6f3cda38e90b844471944c565412f8909b61b5df SHA1 6b06e33f7878136194200297b800ce60143a615b SHA256 2742d12e74dfa23cfc97b56139e118c85b077b09196259592e0bb812970c899b
 DIST cld-themes-11.6.tar.bz2 39406803 RMD160 427ab74692c60802ed496f7335f46fc0a289b3e8 SHA1 1c5e3f658bd2c2a8e96398a1a9dc5ab8e1deda29 SHA256 6e2d30db45f2bd48fb4c5cda9f91936f09d618d251b211029f3eda4231289522
 EBUILD cld-themes-10.0-r1.ebuild 2095 RMD160 cbbb5720dacbf56eb5998fc61a3d252111865556 SHA1 0a7864a38d04f84879801075e41cbf7a0ec7dfec SHA256 52b5880d37c79fa43f1401b0a096f9aa6803e18e95fb5bc79e3a4cc5ae2503de
 EBUILD cld-themes-10.0.1.ebuild 2212 RMD160 3a33ab63efc6e45ead529e49823f698d4341112d SHA1 b3a44f30811753710d8d9400b52031ec7e1fbb9d SHA256 80fa155271d4d44dcb0809d11fe0a5790a642192ccb6b6b4561a813f6a4fa601
@@ -13,6 +14,7 @@ EBUILD cld-themes-10.9-r9.ebuild 2610 RMD160 f5e12b644bbc5ff16446a43f4b3a6304b46
 EBUILD cld-themes-11.0-r6.ebuild 2652 RMD160 f06ddfdf90f7fe74fc1b0bde80a2d14688cc2925 SHA1 abc7f341f3ea27f4abae0d27d38e426a0f55ba1e SHA256 ce4e43e61f1a07de518d558199476e77360dbefccb1464c96385197d8feb81f5
 EBUILD cld-themes-11.0-r7.ebuild 2280 RMD160 e1cd2f3476ab0c494317990aa6ec6c5afa424acc SHA1 894375e02c15d716d075bb8fc0f4909c392353eb SHA256 9b4bd9e7b127d9dd9e7db701abeda6a8e69c3b7d9b58849c146a463ce5425259
 EBUILD cld-themes-11.3.ebuild 2280 RMD160 6f1a3201d51c3597ef7ecdb91c1eac8f53c95efa SHA1 80119d0ad6374fdd7b2927de738c4fb62193335a SHA256 377ceff808408098f36e3f87ae861ebffc7ccd3e244376cdeae79d4cd87b7da0
+EBUILD cld-themes-11.6-r1.ebuild 2382 RMD160 2ada60e226db60ba557e3576743ebdef5d16ecde SHA1 c930390e9b7994609b84935cb5433cb619d6cb53 SHA256 15700fc300d17f2625579fb2501d20756a7ac0e6b12188952aee2687e4b16477
 EBUILD cld-themes-11.6.ebuild 2280 RMD160 6f1a3201d51c3597ef7ecdb91c1eac8f53c95efa SHA1 80119d0ad6374fdd7b2927de738c4fb62193335a SHA256 377ceff808408098f36e3f87ae861ebffc7ccd3e244376cdeae79d4cd87b7da0
-MISC ChangeLog 2043 RMD160 1c18116823bcd85b310258c043c61657724b351a SHA1 c1417135ce78dd8b097db4ad244e22930b92f2e3 SHA256 94679327637c9d4d446abcadf307b7804ab3d31d71a702d2baafb8256d44b2bb
+MISC ChangeLog 2204 RMD160 7c96fa4e355adadaf7f0288970b315f9e45209b1 SHA1 ab188a1f3e0d8b5c4917d9a58477ab24fee3bafa SHA256 4ca84cb82ac6c76a3d30bf0945093f67d2a8a61b09f2058b014d64c875a9a009
 MISC metadata.xml 260 RMD160 59c747eaacafdcd25e3ff8c6a015d7b6879ff2c6 SHA1 bbc63bb4cd46fe301ef559f8945c614c338e5193 SHA256 7c0be206f5d6dd3bc91b97f691127a424cce958a1249ab726467278de23455e7
