@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cld-themes-11.6-r1 (27 Jun 2011)
+
+  27 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +cld-themes-11.6-r1.ebuild:
+  Update for add romanian welcome.
+
 *cld-themes-11.6 (17 May 2011)
 
   17 May 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
